--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,28 +1,15 @@
-.App {
-  text-align: center;
+.charactersList_wrapper {
+  border: 1px solid blue;
+  margin: 0 auto;
+  width: 70%;
+  background: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.char_list {
+  border: 1px solid green;
+  margin: 0 auto;
 }
